Typesikker sektor lets go